--- a/src/App.css
+++ b/src/App.css
@@ -2,21 +2,21 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
+.row {
+  
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.row * {
+  padding: 40px;
+  display: inline-block;
 }
 
-.App-link {
-  color: #09d3ac;
+.row:nth-child(even) * {
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+}
+
+.row *:nth-child(even) {
+  border-left: 1px solid black;
+  border-right: 1px solid black;
 }
